Bug 228742 - locking in uipc_ready() seems incorrect after r333744
Summary: locking in uipc_ready() seems incorrect after r333744
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: CURRENT
Hardware: Any Any
: --- Affects Some People
Assignee: Matt Macy
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2018-06-04 14:48 UTC by Mark Johnston
Modified: 2018-08-29 17:42 UTC (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Johnston freebsd_committer freebsd_triage 2018-06-04 14:48:34 UTC
r333744 changed the unix socket locking protocol so that the unp_conn field of a PCB is protected by the PCB lock rather than the linkage lock.  But uipc_ready() still uses the old locking protocol.
Comment 1 commit-hook freebsd_committer freebsd_triage 2018-06-08 20:32:35 UTC
A commit references this bug:

Author: mmacy
Date: Fri Jun  8 20:32:00 UTC 2018
New revision: 334855
URL: https://svnweb.freebsd.org/changeset/base/334855

Log:
  AF_UNIX: bring uipc_ready in compliance with new locking protocol

  PR:	228742
  Submitted by: markj
  Reviewed by:	markj

Changes:
  head/sys/kern/uipc_usrreq.c