AF_UNIX: bring uipc_ready in compliance with new locking protocol

PR:	228742
Submitted by: markj
Reviewed by:	markj